themes/a11y-base.css
/* ... */
GtkComboBox .separator {
    color: transparent;
}

.trough {
    background-color: @theme_button_bg;
    color: @theme_active_color;

    border-width: 1px;
    border-style: solid;
    border-color: @theme_active_color;
    border-radius: 3px;
}

.trough:insensitive {
    border-color: @theme_insensitive_border;
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

.trough:insensitive:active {
    background-color: @theme_insensitive_bg;
}

.progressbar {
    background-color: @theme_highlight_color;
    border-width: 1px;
    border-color: @theme_highlight_border;
    border-radius: 3px
}

GtkComboBox .button {
    padding: 0 4px;
}

.combobox-entry .button {
    background-color: @theme_base_color;
    color: @theme_fg_color;
    border-width: 1px;
    border-color: @theme_fg_color;
}

.combobox-entry .button:hover {
    background-color: @theme_fg_color;
}

.combobox-entry .button:active {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.combobox-entry .button:insensitive {
    background-color: @theme_insensitive_bg;
    color: @theme_internal_bg;
    border-color: @theme_insensitive_border;
}

.combobox-entry .entry:first-child {
    border-right-width: 0px;
    border-radius: 2px 0 0 2px;
}

.combobox-entry .entry:last-child {
    border-left-width: 0px;
    border-radius: 0 2px 2px 0;
}

.combobox-entry .button:first-child {
    border-radius: 2px 0 0 2px;
}

.combobox-entry .button:last-child {
    border-radius: 0 2px 2px 0;
}

.spinbutton .button {
    padding: 2px 6px;
    color: @theme_active_color;

    border-width: 1px;
    border-radius: 0;
    background-color: @theme_base_color;
    background-clip: border-box;

    border-color: transparent @theme_internal_border;
}

.spinbutton .button:hover {
    background-color: @theme_active_color;
    color: @theme_insensitive_bg;
    border-color: @theme_fg_color;
}

.spinbutton .button:insensitive {
    color: @theme_internal_bg;
    background-color: @theme_insensitive_bg;
}

.spinbutton .button:focus {
    border-top-color: @theme_highlight_color;
    border-bottom-color: @theme_highlight_color;
}

.spinbutton .button:first-child,
.spinbutton .button:last-child {
    border-color: transparent;
}

.spinbutton .button:first-child:focus {
    border-color: @theme_highlight_color;
    border-right-color: transparent;
}

.spinbutton .button:last-child:focus {
    border-color: @theme_highlight_color;
    border-left-color: transparent;
}

.spinbutton .button:first-child {
    border-radius: 2px 0 0 2px;
}

.spinbutton .button:last-child {
    border-radius: 0 2px 2px 0;
}

.menuitem {
    color: @theme_fg_color;
}

.menuitem:insensitive {
    color: @theme_button_insensitive_fg;
}

.menubar .menuitem {
    padding: 3px 5px;
}

.menubar .menuitem:hover {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.menu .menuitem {
    padding: 4px;
}

.menu .menuitem:hover {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.menu {
    border-style: solid;
    border-color: @theme_fg_color;
    border-width: 1px;

    color: @theme_fg_color;
}

.menuitem.separator {
    -GtkMenuItem-horizontal-padding: 0;
}

.toolbar {
    padding: 4px;
    border-width: 1px 0;
    border-style: solid;
    border-color: @theme_active_color;
}

.toolbar .button {
    background-color: transparent;
}

.toolbar .button:insensitive {
    background-color: @theme_base_color;
}

.primary-toolbar .button:insensitive {
    background-color: transparent;
    color: @theme_insensitive_color ;
}

.raised .button,
.raised.button {
    background-color: @theme_button_bg;
}

.primary-toolbar .raised .button:insensitive,
.primary-toolbar .raised.button:insensitive {
    border-color: @theme_button_insensitive_border;
    background-color: @theme_button_insensitive_bg;
    color: @theme_button_insensitive_fg;
}

.primary-toolbar .raised .button:active,
.primary-toolbar .raised.button:active,
.primary-toolbar .button:active,
.toolbar .button:active {
    background-color: @theme_slider_bg;
    border-color: @theme_slider_bg;
}

.primary-toolbar .raised .button:hover,
.primary-toolbar .raised.button:hover,
.primary-toolbar .button:hover,
.toolbar .button:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

.primary-toolbar .raised .button:active:insensitive,
.primary-toolbar .raised.button:active:insensitive,
.primary-toolbar .button:active:insensitive,
.toolbar .button:active:insensitive {
    border-color: @theme_button_insensitive_active_bg;
    background-color: @theme_button_insensitive_active_bg;

    color: @theme_base_color;
}

.linked .button,
.inline-toolbar .button {
    color: @theme_active_color;
    border-color: @theme_active_color;
    background-color: @theme_base_color;
}

.linked .button:hover,
.inline-toolbar .button:hover {
    color: @theme_base_color;
    border-color: @theme_fg_color;
}

.linked .button:active,
.inline-toolbar .button:active {
    color: @theme_base_color;
}

.linked .button:insensitive,
.inline-toolbar .button:insensitive {
    border-color: @theme_insensitive_border;
    background-color: @theme_button_insensitive_bg;

    color: @theme_button_insensitive_fg;
}

.primary-toolbar.toolbar,
.primary-toolbar .toolbar,
.menubar.toolbar,
.inline-toolbar {
    -GtkToolbar-button-relief: normal;
}

.primary-toolbar {
    background-color: @theme_primary_toolbar;
}

.inline-toolbar {
    background-color: @theme_button_bg;
}

.inline-toolbar {
    border-width: 0 1px 1px;
}

.inline-toolbar:last-child {
    border-radius: 0 0 3px 3px;
}

.primary-toolbar.toolbar,
.primary-toolbar .toolbar,
.menubar {
    -GtkWidget-window-dragging: true;
}

.primary-toolbar .button {
    border-color: transparent;
}

.primary-toolbar .button.raised,
.primary-toolbar .raised .button {
    border-color: @theme_button_fg;
}
/* ... */

